added loop for employees. output list to index.html. app complete!

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <div class="col-md-4">
           <h1>&nbsp;</h1>
           <h3>Staff Availability</h3>
+          <div class="row" id="employees-list"> </div>                    
+          
           <div id="display-ajax"></div>
         </div>
       </div>
